# cstar

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  HEADER  LICENSE  README.md  pixi.toml  pyproject.toml  renovate.json
cstar/: exceptions.py  state.py  types.py
cstar/core/: __init__.py  context.py  observable.py  sieve.py
cstar/dsl/: __init__.py  system.py
examples/: hello.py
src/cstar/: __init__.py
src/cstar/compiler/: daseinisation.py  geometer.py  presheaf.py
src/cstar/core/: __init__.py  context.py  measurement.py  sieve.py  system.py
src/cstar/math/: operators.py
